--- a/openshift/VLD_DSOPS_MC_OCP4_HUB_CLUSTER/config.yaml
+++ b/openshift/VLD_DSOPS_MC_OCP4_HUB_CLUSTER/config.yaml
@@ -140,7 +140,7 @@ requirements_content:
     version: 1.3.0
 
 infra_workloads:
-- ocp4_workload_authentication
+#- ocp4_workload_authentication
 - ocp4_workload_le_certificates
 - ocp4_workload_rhacs
 - ocp4_workload_openshift_data_foundation
