--- a/openshift/VLD_DSOPS_MC_OCP4_HUB_CLUSTER/config.yaml
+++ b/openshift/VLD_DSOPS_MC_OCP4_HUB_CLUSTER/config.yaml
@@ -232,7 +232,7 @@ ocp4_workload_gitea_operator_repositories_list:
 # -------------------------------------------------------------------
 ocp4_workload_openshift_gitops_channel: stable
 ocp4_workload_openshift_gitops_pipelines_csv_prefix: openshift-pipelines-operator-rh
-ocp4_workload_openshift_gitops_use_catalog_snapshot: false
+ocp4_workload_openshift_gitops_use_catalog_snapshot: true
 ocp4_workload_openshift_gitops_catalogsource_name: redhat-operators-snapshot-gitops
 ocp4_workload_openshift_gitops_catalog_snapshot_image: quay.io/gpte-devops-automation/olm_snapshot_redhat_catalog
 ocp4_workload_openshift_gitops_catalog_snapshot_image_tag: v4.12_2023_02_20
@@ -243,7 +243,7 @@ ocp4_workload_openshift_gitops_catalog_snapshot_image_tag: v4.12_2023_02_20
 ocp4_workload_pipelines_channel: pipelines-1.10
 ocp4_workload_pipelines_tkn_version: 0.41.0
 ocp4_workload_pipelines_csv_nameprefix: openshift-pipelines-operator-rh
-ocp4_workload_pipelines_use_catalog_snapshot: false
+ocp4_workload_pipelines_use_catalog_snapshot: true
 ocp4_workload_pipelines_catalog_snapshot_image: quay.io/gpte-devops-automation/olm_snapshot_redhat_catalog
 ocp4_workload_pipelines_catalog_snapshot_image_tag: v4.12_2023_02_20
 
