--- a/openshift/OCP4_DEVSPACES_EE/config.yaml
+++ b/openshift/OCP4_DEVSPACES_EE/config.yaml
@@ -44,7 +44,7 @@ student_sudo: true
 # -------------------------------------------------------------------
 # --- Infra Workloads (YAML List)
 infra_workloads:
-- ocp4_workload_authentication
+#- ocp4_workload_authentication
 - ocp4_workload_project_request_template
 - ocp4_workload_opentlc_production
 #- ocp4_workload_le_certificates
