--- a/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
+++ b/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
@@ -103,11 +103,12 @@ ocp4_workload_opentlc_production_set_build_defaults: true
 # -------------------------------------------------------------------
 # OpenShift Pipelines
 # -------------------------------------------------------------------
-ocp4_workload_pipelines_channel: stable
+ocp4_workload_pipelines_channel: pipelines-1.9
+ocp4_workload_pipelines_tkn_version: 0.41.0
+ocp4_workload_pipelines_csv_nameprefix: openshift-pipelines-operator-rh
 ocp4_workload_pipelines_use_catalog_snapshot: true
-ocp4_workload_pipelines_starting_csv: redhat-openshift-pipelines.v1.5.1
 ocp4_workload_pipelines_catalog_snapshot_image: quay.io/gpte-devops-automation/olm_snapshot_redhat_catalog
-ocp4_workload_pipelines_catalog_snapshot_image_tag: v4.8_2021_09_13
+ocp4_workload_pipelines_catalog_snapshot_image_tag: v4.12_2023_02_20
 
 # -------------------------------------------------------------------
 # Nexus Operator
