--- a/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
+++ b/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
@@ -63,6 +63,7 @@ ocp_username: cluster-admin
 infra_workloads:
 - ocp4_workload_generate_kubeconfig
 - ocp4_workload_rosa_authentication
+- ocp4_workload_le_certificates
 - ocp4_workload_opentlc_production
 - ocp4_workload_project_request_template_rosa_aro
 - ocp4_workload_pipelines
