--- a/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
+++ b/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
@@ -136,3 +136,6 @@ gogs_project: labs
 etherpad_project: labs
 project_name: labs
 workshop_type: starter
+homeroom_template_path: "https://raw.githubusercontent.com/treddy08/workshop-homeroom/develop/templates/production.json"
+lab_branch: ocp-4.8
+lab_repo: "https://github.com/treddy08/starter-guides"
