--- a/openshift/OCP4_GETTING_STARTED_WKSP_ARO/config.yaml
+++ b/openshift/OCP4_GETTING_STARTED_WKSP_ARO/config.yaml
@@ -62,7 +62,7 @@ ocp_username: kubeadmin
 # -------------------------------------------------------------------
 infra_workloads:
 - ocp4_workload_generate_kubeconfig
-- ocp4_workload_authentication_managed_ocp
+- ocp4_workload_authentication
 - ocp4_workload_opentlc_production
 - ocp4_workload_project_request_template_rosa_aro
 - ocp4_workload_pipelines
@@ -81,11 +81,19 @@ student_workloads: []
 # -------------------------------------------------------------------
 # Authentication
 # -------------------------------------------------------------------
-ocp4_workload_authentication_managed_ocp_htpasswd_user_base: user
+ocp4_workload_authentication_idm_type: htpasswd
+ocp4_workload_authentication_admin_user: opentlc-mgr
 # When no password specified it is generated
-ocp4_workload_authentication_managed_ocp_htpasswd_user_password: openshift
-ocp4_workload_authentication_htpasswd_user_password: "{{ ocp4_workload_authentication_managed_ocp_htpasswd_user_password }}"
-ocp4_workload_authentication_managed_ocp_httpasswd_create: true
+ocp4_workload_authentication_htpasswd_admin_password: r3dh4t1!
+ocp4_workload_authentication_htpasswd_user_base: user
+# When no password specified it is generated
+ocp4_workload_authentication_htpasswd_user_password: openshift
+
+# Create 'user_count' student users
+ocp4_workload_authentication_htpasswd_user_count: "{{ (num_users | default('2')) | int }}"
+
+# Remove the standard kubeadmin user
+ocp4_workload_authentication_remove_kubeadmin: true
 
 # -------------------------------------------------------------------
 # OpenTLC Production
