--- a/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
+++ b/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
@@ -23,6 +23,8 @@ platform: RHPDS
 
 env_type: ocp4-cluster
 software_to_deploy: openshift4
+
+cloud_provider: ec2
 # -------------------------------------------------------------------
 # End Mandatory Variables
 # -------------------------------------------------------------------
