--- a/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
+++ b/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
@@ -10,15 +10,10 @@ infra_workloads:
 # -------------------------------------------------------------------
 # Workload: ocp4_workload_authentication
 # -------------------------------------------------------------------
-ocp4_workload_authentication_idm_type: htpasswd
-ocp4_workload_authentication_admin_user: cluster-mgr
+ocp4_workload_authentication_managed_ocp_htpasswd_user_base: user
 # When no password specified it is generated
-ocp4_workload_authentication_htpasswd_admin_password: "{{ common_password }}"
-ocp4_workload_authentication_htpasswd_user_base: user
-# When no password specified it is generated
-# ocp4_workload_authentication_htpasswd_user_password: openshift
-ocp4_workload_authentication_htpasswd_user_count: "{{ num_users | default('1') }}"
-ocp4_workload_authentication_remove_kubeadmin: false
+ocp4_workload_authentication_managed_ocp_htpasswd_user_password: openshift
+ocp4_workload_authentication_htpasswd_user_password: "{{ ocp4_workload_authentication_managed_ocp_htpasswd_user_password }}"
 
 # -------------------------------------------------------------------
 # Common Password
