--- a/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
+++ b/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
@@ -38,11 +38,9 @@ ocp4_workload_rhacs_central_admin_password: "{{ common_password }}"
 # -------------------------------------------------------------------
 # Workload: ocp4_workload_pipelines
 # -------------------------------------------------------------------
-ocp4_workload_pipelines_channel: stable
-ocp4_workload_pipelines_use_catalog_snapshot: true
-ocp4_workload_pipelines_catalog_snapshot_image_tag: v4.9_2022_02_07
-ocp4_workload_pipelines_catalogsource_name: redhat-operators-snapshot-pipelines
+ocp4_workload_pipelines_channel: pipelines-1.8
 ocp4_workload_pipelines_csv_nameprefix: openshift-pipelines-operator-rh
+ocp4_workload_pipelines_use_catalog_snapshot: false
 
 # -------------------------------------------------------------------
 # Student User on Bastion
