--- a/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
+++ b/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
@@ -65,4 +65,4 @@ sandbox_student_user: true
 # -------------------------------------------------------------------
 install_ftl: false
 WORKSHOP_FILE: workshop-appmod.yaml
-HOMEROOM_IMAGE: "13.0.1"
+HOMEROOM_IMAGE: ocp4-prod
