--- a/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
+++ b/openshift/OCP4_ACM_ACS_OPS_WKSP/config.yaml
@@ -21,17 +21,23 @@ ocp4_workload_authentication_htpasswd_user_password: "{{ ocp4_workload_authentic
 # -------------------------------------------------------------------
 common_password: "{{ (guid[:5] | hash('md5') | int(base=16) | b64encode)[:8] }}"
 
-# -------------------------------------------------------------------
+ -------------------------------------------------------------------
 # Workload: ocp4_workload_rhacm
 # -------------------------------------------------------------------
 
+ocp4_workload_rhacm_acm_channel: "release-2.6"
 ocp4_workload_rhacm_use_catalog_snapshot: true
+ocp4_workload_rhacm_catalogsource_name: catalogsource-rhacm
 ocp4_workload_rhacm_catalog_source_image: "quay.io/gpte-devops-automation/olm_snapshot_redhat_catalog"
-ocp4_workload_rhacm_catalog_source_tag: "v4.10_2022_08_01"
-ocp4_workload_rhacm_acm_csv: "advanced-cluster-management.v2.5.1"
-ocp4_workload_rhacm_acm_channel: "release-2.5"
-ocp4_workload_rhacm_acm_release: "release-2.5"
+ocp4_workload_rhacm_catalog_source_tag: "v4.12_2023_02_20"
 
+# -------------------------------------------------------------------
+# Workload: ocp4_workload_rhacs
+# -------------------------------------------------------------------
+ocp4_workload_rhacs_install_operator_channel: "rhacs-3.73"
+ocp4_workload_rhacs_install_operator_starting_csv: "rhacs-operator.v3.73.1"
+ocp4_workload_rhacs_install_operator_use_catalog_snapshot: true
+#ocp4_workload_rhacs_install_operator_catalog_source_tag: "v4.10_2022_04_04"
 ocp4_workload_rhacs_central_admin_password: "{{ common_password }}"
 
 # -------------------------------------------------------------------
