--- a/openshift/OCP4_GETTING_STARTED_WKSP_ARO/config.yaml
+++ b/openshift/OCP4_GETTING_STARTED_WKSP_ARO/config.yaml
@@ -143,3 +143,12 @@ workshop_type: starter
 homeroom_template_path: "https://raw.githubusercontent.com/treddy08/workshop-homeroom/develop/templates/production.json"
 lab_branch: ocp-4.8
 lab_repo: "https://github.com/treddy08/starter-guides"
+repositories:
+  - base: https://github.com/treddy08
+    name: nationalparks
+  - base: https://github.com/openshift-roadshow
+    name: nationalparks-py
+  - base: https://github.com/openshift-roadshow
+    name: nationalparks-dotnet
+  - base: https://github.com/openshift-roadshow
+    name: nationalparks-js
