--- a/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
+++ b/openshift/OCP4_GETTING_STARTED_WKSP_ROSA/config.yaml
@@ -63,7 +63,7 @@ ocp_username: cluster-admin
 # -------------------------------------------------------------------
 infra_workloads:
 - ocp4_workload_generate_kubeconfig
-- ocp4_workload_authentication_managed_ocp
+- ocp4_workload_authentication_rosa
 - ocp4_workload_opentlc_production
 - ocp4_workload_project_request_template_rosa_aro
 - ocp4_workload_pipelines
@@ -82,10 +82,10 @@ student_workloads: []
 # -------------------------------------------------------------------
 # Authentication
 # -------------------------------------------------------------------
-ocp4_workload_authentication_managed_ocp_htpasswd_user_base: user
+ocp4_workload_authentication_rosa_user_base: user
 # When no password specified it is generated
-ocp4_workload_authentication_managed_ocp_htpasswd_user_password: openshift
-ocp4_workload_authentication_htpasswd_user_password: "{{ ocp4_workload_authentication_managed_ocp_htpasswd_user_password }}"
+ocp4_workload_authentication_rosa_user_password: Openshift@1
+ocp4_workload_authentication_rosa_admin_password: Openshift@1
 
 # -------------------------------------------------------------------
 # OpenTLC Production
