--- a/openshift/OCP4_WKSP_BASE_RHODS_ON_ROSA/config.yaml
+++ b/openshift/OCP4_WKSP_BASE_RHODS_ON_ROSA/config.yaml
@@ -69,6 +69,7 @@ infra_workloads:
 - ocp4_workload_pipelines
 - ocp4_workload_rhods_self_managed
 - ocp4_workload_web_terminal
+- ocp4_workload_gitea_operator
 
 # -------------------------------------------------------------------
 # Student Workloads ([] means no student workloads)
@@ -142,3 +143,51 @@ ocp4_workload_web_terminal_operator_use_catalog_snapshot: false
 ocp4_workload_web_terminal_operator_catalogsource_name: redhat-operators-snapshot-amq-streams
 ocp4_workload_web_terminal_operator_catalog_snapshot_image: quay.io/gpte-devops-automation/olm_snapshot_redhat_catalog
 ocp4_workload_web_terminal_operator_catalog_snapshot_image_tag: "v4.13_2023_07_17"
+
+# -------------------------------------------------------------------
+# Workload: ocp4_workload_gitea_operator
+# -------------------------------------------------------------------
+ocp4_workload_gitea_operator_project: gitea
+
+ocp4_workload_gitea_operator_catalog_image: quay.io/rhpds/gitea-catalog
+ocp4_workload_gitea_operator_catalog_image_tag: v2.0.1
+ocp4_workload_gitea_operator_gitea_image: quay.io/rhpds/gitea
+ocp4_workload_gitea_operator_gitea_image_tag: 1.20.0
+
+ocp4_workload_gitea_operator_deploy_gitea_instance: true
+ocp4_workload_gitea_operator_name: gitea
+ocp4_workload_gitea_operator_gitea_hostname: gitea
+ocp4_workload_gitea_operator_gitea_volume_size: 2Gi
+ocp4_workload_gitea_operator_postgresql_volume_size: 2Gi
+ocp4_workload_gitea_operator_ssl_route: true
+
+ocp4_workload_gitea_operator_disable_registration: false
+ocp4_workload_gitea_operator_enable_captcha: false
+ocp4_workload_gitea_operator_allow_create_organization: true
+ocp4_workload_gitea_operator_register_email_confirm: false
+ocp4_workload_gitea_operator_enable_notify_email: false
+ocp4_workload_gitea_operator_mailer_enabled: false
+
+ocp4_workload_gitea_operator_create_admin: true
+ocp4_workload_gitea_operator_admin_user: opentlc-mgr
+ocp4_workload_gitea_operator_admin_email: opentlc-mgr@opentlc.com
+ocp4_workload_gitea_operator_admin_password: openshift
+
+ocp4_workload_gitea_operator_create_users: true
+ocp4_workload_gitea_operator_user_number: 1
+ocp4_workload_gitea_operator_generate_user_format: lab-user
+ocp4_workload_gitea_operator_user_password: openshift
+ocp4_workload_gitea_operator_migrate_repositories: true
+ocp4_workload_gitea_operator_repositories_list:
+- repo: https://github.com/Enterprise-Neurosystem/edge-anomaly-detection.git
+  name: edge-anomaly-detection
+  private: false
+- repo: https://github.com/Enterprise-Neurosystem/edge-prediction-failure.git
+  name: edge-prediction-failure
+  private: false
+- repo: https://github.com/Enterprise-Neurosystem/cluster-bootstrap.git
+  name: edge-cluster-bootstrap
+  private: false
+- repo: https://github.com/Enterprise-Neurosystem/edge-synthetic-data-generator.git
+  name: edge-synthetic-data-generator
+  private: false
