--- a/openshift/RHACS_MULTIUSER_WORKSHOP/config.yaml
+++ b/openshift/RHACS_MULTIUSER_WORKSHOP/config.yaml
@@ -31,7 +31,7 @@ ocp4_installer_root_url: http://mirror.openshift.com/pub/openshift-v4/clients
 # -------------------------------------------------------------------
 # Common Password
 # -------------------------------------------------------------------
-common_password: "{{ (guid[:5] | hash('md5') | int(base=16) | b64encode)[:8] }}"
+common_password: "openshift"
 
 # -------------------------------------------------------------------
 # --- Infra Workloads (YAML List)
